Update Maven extension to 1.2.3

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # MAVEN
 # -----
 /target
-.mvn/gradle-enterprise-workspace-id.txt
+.mvn/.gradle-enterprise/gradle-enterprise-workspace-id
 
 # OS X
 # ----
